Corrected function for reading json files

--- a/smith/get_new_data.ipynb
+++ b/smith/get_new_data.ipynb
@@ -8029,7 +8029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "a24ba1cb",
    "metadata": {},
    "outputs": [
@@ -8293,6 +8293,9 @@
       "Finished with: 247 of 249\n",
       "Skipping: 248 due to <20 min or not classic\n",
       "Finished with: 249 of 249\n",
+      "Extracted the data! Entries: 127\n",
+      "Prepared the data! Entries: 2\n",
+      "Appended the data! Complete DataFrame Entries: 127\n",
       "Finished with: 0 of 249\n",
       "Skipping: 1 due to <20 min or not classic\n",
       "Skipping: 2 due to <20 min or not classic\n",
@@ -8524,15 +8527,15 @@
       "Finished with: 228 of 249\n",
       "Finished with: 229 of 249\n",
       "Skipping: 230 due to <20 min or not classic\n",
-      "Skipping: 231 due to <20 min or not classic\n",
-      "Finished with: 232 of 249\n",
-      "Finished with: 233 of 249\n"
+      "Skipping: 231 due to <20 min or not classic\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Finished with: 232 of 249\n",
+      "Finished with: 233 of 249\n",
       "Finished with: 234 of 249\n",
       "Skipping: 235 due to <20 min or not classic\n",
       "Finished with: 236 of 249\n",
@@ -8548,7 +8551,10 @@
       "Skipping: 246 due to <20 min or not classic\n",
       "Skipping: 247 due to <20 min or not classic\n",
       "Finished with: 248 of 249\n",
-      "Skipping: 249 due to <20 min or not classic\n"
+      "Skipping: 249 due to <20 min or not classic\n",
+      "Extracted the data! Entries: 131\n",
+      "Prepared the data! Entries: 2\n",
+      "Appended the data! Complete DataFrame Entries: 258\n"
      ]
     }
    ],
@@ -8568,12 +8574,15 @@
     "\n",
     "    #Now feed them into Joshua C's prepare file. Extract data at the 15 minute mark\n",
     "    temp_df = acquire.extract(timeline_list, game_list, 15)\n",
+    "    print(f'Extracted the data! Entries: {len(temp_df)}')\n",
     "\n",
     "    #Now prepare the data\n",
     "    temp_df = prepare.prepare(temp_df)\n",
+    "    print(f'Prepared the data! Entries: {len(temp_df)}')\n",
     "\n",
     "    #Now append the temp_df to the complete_df\n",
-    "    complete_df.append(temp_df, ignore_index = True)\n",
+    "    complete_df = complete_df.append(temp_df, ignore_index = True)\n",
+    "    print(f'Appended the data! Complete DataFrame Entries: {len(complete_df)}')\n",
     "\n",
     "#Drop duplicates and return the prepared df\n",
     "complete_df = complete_df.drop_duplicates()"
@@ -8581,8 +8590,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "aacfc080",
+   "execution_count": 11,
+   "id": "37ffa02d",
    "metadata": {},
    "outputs": [
     {
@@ -8590,8 +8599,10 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 0 entries\n",
-      "Empty DataFrame"
+      "Int64Index: 248 entries, 0 to 257\n",
+      "Columns: 1659 entries, killsplayer_1 to gameEndTimestamp_1637375813217\n",
+      "dtypes: float64(1600), int64(32), uint8(27)\n",
+      "memory usage: 3.1 MB\n"
      ]
     }
    ],
@@ -8658,7 +8669,7 @@
     "        temp_df = prepare.prepare(temp_df)\n",
     "\n",
     "        #Now append the temp_df to the complete_df\n",
-    "        complete_df.append(temp_df, ignore_index = True)\n",
+    "        complete_df = complete_df.append(temp_df, ignore_index = True)\n",
     "            \n",
     "    #Drop duplicates and return the prepared df\n",
     "    complete_df = complete_df.drop_duplicates()\n",
