Tried extracting data for 10 minute mark, ran into problems. Will troubleshoot later

--- a/smith/modeling_smith.ipynb
+++ b/smith/modeling_smith.ipynb
@@ -8862,7 +8862,7 @@
    "id": "ca3f8772",
    "metadata": {},
    "source": [
-    "# Build Models For New Data"
+    "# Build Models For New Data at 15 Minutes"
    ]
   },
   {
@@ -8892,7 +8892,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "95bae6a9",
+   "id": "ca82b9f6",
    "metadata": {},
    "outputs": [
     {
@@ -8913,7 +8913,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8efc2617",
+   "id": "61c5e075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8928,7 +8928,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0190693f",
+   "id": "5b2cfdaa",
    "metadata": {},
    "outputs": [
     {
@@ -8975,7 +8975,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c7d562e8",
+   "id": "3d7abf7f",
    "metadata": {},
    "outputs": [
     {
@@ -8996,7 +8996,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "77e2e0fc",
+   "id": "31e6c4b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9015,7 +9015,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b8dacc24",
+   "id": "89be22ff",
    "metadata": {},
    "outputs": [
     {
@@ -9041,12 +9041,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a4677ef",
+   "metadata": {},
+   "source": [
+    "# Build Models For New Data at 10 Minutes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "40311394",
+   "execution_count": 1,
+   "id": "c27b3f77",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import acquire\n",
+    "import prepare\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import cross_val_score, GridSearchCV, train_test_split, cross_validate\n",
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2727f1d",
+   "metadata": {},
+   "source": [
+    "__Extract Function Does Not Work For Time = 10__\n",
+    "\n",
+    "I need to wait until Joshua can take a look and fix the issue. However, this is not top priority."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "886d2acd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Need to extract data for the 10 minute mark\n",
+    "extracted_data = acquire.build_extracted_df(username = 'smith', path = './new_data/', time = 10)"
+   ]
   }
  ],
  "metadata": {
