updating final_csv

--- a/master10_csv/merge.ipynb
+++ b/master10_csv/merge.ipynb
@@ -20,7 +20,9 @@
     "df = pd.read_csv('min_10_start_3700_end_4173_.csv')\n",
     "df2 = pd.read_csv('pro_players_10min')\n",
     "df3 = pd.read_csv('min_10_start_1500_end_1515_.csv')\n",
-    "df4 = pd.read_csv('new_extracted_data_chavez_time_10.csv')"
+    "df4 = pd.read_csv('new_extracted_data_chavez_time_10.csv')\n",
+    "df5 = pd.read_csv('new_extracted_data_Jared_time_10.csv')\n",
+    "df6 = "
    ]
   },
   {
