--- a/master15_csv/merge.ipynb
+++ b/master15_csv/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "7afac051",
    "metadata": {},
    "outputs": [],
@@ -12,50 +12,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "e294e740",
    "metadata": {},
    "outputs": [],
    "source": [
+    "final_df = pd.read_csv('final_15.csv')\n",
     "df = pd.read_csv('min_15_start_1500_end_1515_.csv')\n",
     "df2 = pd.read_csv('new_extracted_data_chavez_time_15.csv')\n",
-    "df3 = pd.read_csv('min_15_start_3700_end_4173_.csv')\n",
-    "df4 = pd.read_csv('pro_players_15min')"
+    "df4 = pd.read_csv('pro_players_15min')\n",
+    "df5 = pd.read_csv('new_extracted_data_Jared_time_15.csv')\n",
+    "df6 = pd.read_csv('new_extracted_data_smith_time_15.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6be1148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = pd.concat([df, df2], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d5f613c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = pd.concat([df, df3], axis=0, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b6be1148",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.concat([df, df2], axis=0, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3d5f613c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.concat([df, df3], axis=0, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "d175616e",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df4' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-bb962294209b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df4' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#df = pd.concat([df, df4], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "07c71086",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([df, df4], axis=0, ignore_index=True)"
+    "df = pd.concat([final_df, df5], axis=0, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "60e353c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df6], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "ad5293dd",
    "metadata": {},
    "outputs": [],
@@ -269,128 +303,128 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2434</th>\n",
+       "      <th>5246</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5731.0</td>\n",
-       "      <td>6601.0</td>\n",
-       "      <td>7011.0</td>\n",
-       "      <td>4641.0</td>\n",
-       "      <td>7197.0</td>\n",
-       "      <td>5550.0</td>\n",
-       "      <td>7684.0</td>\n",
-       "      <td>3858.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2435</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4541.0</td>\n",
-       "      <td>6291.0</td>\n",
-       "      <td>4505.0</td>\n",
-       "      <td>4741.0</td>\n",
-       "      <td>7557.0</td>\n",
-       "      <td>6900.0</td>\n",
-       "      <td>5878.0</td>\n",
-       "      <td>5399.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2436</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5409.0</td>\n",
-       "      <td>8599.0</td>\n",
-       "      <td>5279.0</td>\n",
-       "      <td>5033.0</td>\n",
-       "      <td>5470.0</td>\n",
-       "      <td>7028.0</td>\n",
-       "      <td>6207.0</td>\n",
-       "      <td>5132.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2437</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4801.0</td>\n",
-       "      <td>6176.0</td>\n",
-       "      <td>5936.0</td>\n",
-       "      <td>5683.0</td>\n",
-       "      <td>6665.0</td>\n",
-       "      <td>5435.0</td>\n",
-       "      <td>8308.0</td>\n",
-       "      <td>4251.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2438</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4770.0</td>\n",
+       "      <td>7985.0</td>\n",
+       "      <td>5581.0</td>\n",
+       "      <td>4337.0</td>\n",
+       "      <td>6628.0</td>\n",
+       "      <td>7624.0</td>\n",
+       "      <td>7582.0</td>\n",
+       "      <td>4610.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5247</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5656.0</td>\n",
+       "      <td>4517.0</td>\n",
+       "      <td>5996.0</td>\n",
+       "      <td>5804.0</td>\n",
+       "      <td>9099.0</td>\n",
+       "      <td>6264.0</td>\n",
+       "      <td>6286.0</td>\n",
+       "      <td>5354.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5248</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>5771.0</td>\n",
-       "      <td>8273.0</td>\n",
-       "      <td>5881.0</td>\n",
-       "      <td>3978.0</td>\n",
-       "      <td>8114.0</td>\n",
-       "      <td>5430.0</td>\n",
-       "      <td>5986.0</td>\n",
-       "      <td>5891.0</td>\n",
+       "      <td>5116.0</td>\n",
+       "      <td>6002.0</td>\n",
+       "      <td>6354.0</td>\n",
+       "      <td>4155.0</td>\n",
+       "      <td>8305.0</td>\n",
+       "      <td>5582.0</td>\n",
+       "      <td>7943.0</td>\n",
+       "      <td>4521.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5249</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7325.0</td>\n",
+       "      <td>7035.0</td>\n",
+       "      <td>4899.0</td>\n",
+       "      <td>4521.0</td>\n",
+       "      <td>8070.0</td>\n",
+       "      <td>5971.0</td>\n",
+       "      <td>5491.0</td>\n",
+       "      <td>6259.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5250</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6126.0</td>\n",
+       "      <td>8223.0</td>\n",
+       "      <td>4908.0</td>\n",
+       "      <td>4572.0</td>\n",
+       "      <td>7570.0</td>\n",
+       "      <td>6777.0</td>\n",
+       "      <td>5406.0</td>\n",
+       "      <td>5873.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2439 rows × 197 columns</p>\n",
+       "<p>5251 rows × 197 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -401,11 +435,11 @@
        "3                   0.0              3.0               4.0              6.0   \n",
        "4                   0.0              0.0               5.0              1.0   \n",
        "...                 ...              ...               ...              ...   \n",
-       "2434                0.0              2.0               0.0              1.0   \n",
-       "2435                0.0              1.0               4.0              2.0   \n",
-       "2436                0.0              0.0               4.0              2.0   \n",
-       "2437                1.0              0.0               3.0              0.0   \n",
-       "2438                0.0              7.0               8.0              1.0   \n",
+       "5246                0.0              5.0               4.0              1.0   \n",
+       "5247                0.0              0.0               3.0              2.0   \n",
+       "5248                0.0              1.0               6.0              0.0   \n",
+       "5249                0.0              0.0               4.0              0.0   \n",
+       "5250                2.0              3.0               2.0              0.0   \n",
        "\n",
        "      assistsplayer_3  assistsplayer_4  assistsplayer_5  assistsplayer_6  \\\n",
        "0                 2.0              3.0             10.0              0.0   \n",
@@ -414,11 +448,11 @@
        "3                 5.0              2.0              1.0              5.0   \n",
        "4                 0.0              0.0              5.0              1.0   \n",
        "...               ...              ...              ...              ...   \n",
-       "2434              0.0              0.0              4.0              1.0   \n",
-       "2435              3.0              1.0              3.0              3.0   \n",
-       "2436              1.0              2.0              4.0              0.0   \n",
-       "2437              0.0              4.0              6.0              0.0   \n",
-       "2438              2.0              2.0              5.0              0.0   \n",
+       "5246              4.0              5.0              9.0              1.0   \n",
+       "5247              9.0              2.0              1.0              1.0   \n",
+       "5248              3.0              0.0              7.0              2.0   \n",
+       "5249              1.0              1.0              2.0              1.0   \n",
+       "5250              0.0              1.0              4.0              2.0   \n",
        "\n",
        "      assistsplayer_7  assistsplayer_8  ...    xp_2    xp_3    xp_4    xp_5  \\\n",
        "0                 3.0              2.0  ...  6507.0  6115.0  6528.0  3903.0   \n",
@@ -427,11 +461,11 @@
        "3                 2.0              2.0  ...  4066.0  7244.0  5685.0  7173.0   \n",
        "4                 3.0              1.0  ...  5679.0  6994.0  4862.0  4497.0   \n",
        "...               ...              ...  ...     ...     ...     ...     ...   \n",
-       "2434              0.0              4.0  ...  5731.0  6601.0  7011.0  4641.0   \n",
-       "2435              2.0              1.0  ...  4541.0  6291.0  4505.0  4741.0   \n",
-       "2436              0.0              1.0  ...  5409.0  8599.0  5279.0  5033.0   \n",
-       "2437              1.0              1.0  ...  4801.0  6176.0  5936.0  5683.0   \n",
-       "2438              3.0              0.0  ...  5771.0  8273.0  5881.0  3978.0   \n",
+       "5246              2.0              5.0  ...  4770.0  7985.0  5581.0  4337.0   \n",
+       "5247              2.0              4.0  ...  5656.0  4517.0  5996.0  5804.0   \n",
+       "5248              2.0              1.0  ...  5116.0  6002.0  6354.0  4155.0   \n",
+       "5249              1.0              0.0  ...  7325.0  7035.0  4899.0  4521.0   \n",
+       "5250              2.0              1.0  ...  6126.0  8223.0  4908.0  4572.0   \n",
        "\n",
        "        xp_6    xp_7    xp_8    xp_9  waterdragon_team200  airdragon_team200  \n",
        "0     6288.0  6278.0  8847.0  4759.0                  NaN                NaN  \n",
@@ -440,13 +474,13 @@
        "3     4875.0  4112.0  5390.0  5733.0                  1.0                NaN  \n",
        "4     7593.0  6426.0  7441.0  5094.0                  NaN                NaN  \n",
        "...      ...     ...     ...     ...                  ...                ...  \n",
-       "2434  7197.0  5550.0  7684.0  3858.0                  NaN                NaN  \n",
-       "2435  7557.0  6900.0  5878.0  5399.0                  NaN                2.0  \n",
-       "2436  5470.0  7028.0  6207.0  5132.0                  NaN                NaN  \n",
-       "2437  6665.0  5435.0  8308.0  4251.0                  NaN                NaN  \n",
-       "2438  8114.0  5430.0  5986.0  5891.0                  NaN                NaN  \n",
+       "5246  6628.0  7624.0  7582.0  4610.0                  1.0                NaN  \n",
+       "5247  9099.0  6264.0  6286.0  5354.0                  NaN                1.0  \n",
+       "5248  8305.0  5582.0  7943.0  4521.0                  NaN                NaN  \n",
+       "5249  8070.0  5971.0  5491.0  6259.0                  NaN                NaN  \n",
+       "5250  7570.0  6777.0  5406.0  5873.0                  NaN                NaN  \n",
        "\n",
-       "[2439 rows x 197 columns]"
+       "[5251 rows x 197 columns]"
       ]
      },
      "execution_count": 11,
