updating the df concat

--- a/master10_csv/merge.ipynb
+++ b/master10_csv/merge.ipynb
@@ -17,12 +17,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "final_df = pd.read_csv()\n",
     "df = pd.read_csv('min_10_start_3700_end_4173_.csv')\n",
     "df2 = pd.read_csv('pro_players_10min')\n",
     "df3 = pd.read_csv('min_10_start_1500_end_1515_.csv')\n",
     "df4 = pd.read_csv('new_extracted_data_chavez_time_10.csv')\n",
     "df5 = pd.read_csv('new_extracted_data_Jared_time_10.csv')\n",
-    "df6 = "
+    "df6 = pd.read_csv('new_extracted_data_smith_time_10.csv')\n",
+    "df7 = pd.read_csv('')"
    ]
   },
   {
@@ -32,13 +34,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([df, df2], axis=0, ignore_index=True)\n",
+    "#df = pd.concat([df, df2], axis=0, ignore_index=True)\n",
     "\n",
-    "df = pd.concat([df, df3], axis=0, ignore_index=True)\n",
+    "#df = pd.concat([df, df3], axis=0, ignore_index=True)\n",
     "\n",
-    "df = pd.concat([df, df4], axis=0, ignore_index=True)\n",
+    "#df = pd.concat([df, df4], axis=0, ignore_index=True)\n",
     "\n",
-    "df = df.drop(columns=['Unnamed: 0'])"
+    "#df = df.drop(columns=['Unnamed: 0'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a648fae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([final_df, df5], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "787745c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df6], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9828217",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df7], axis=0, ignore_index=True)"
    ]
   },
   {
