updating final csvs

--- a/master15_csv/merge.ipynb
+++ b/master15_csv/merge.ipynb
@@ -22,7 +22,8 @@
     "df2 = pd.read_csv('new_extracted_data_chavez_time_15.csv')\n",
     "df4 = pd.read_csv('pro_players_15min')\n",
     "df5 = pd.read_csv('new_extracted_data_Jared_time_15.csv')\n",
-    "df6 = pd.read_csv('new_extracted_data_smith_time_15.csv')"
+    "df6 = pd.read_csv('new_extracted_data_smith_time_15.csv')\n",
+    "df7 = pd.read_csv('new_extracted_data_bryant_time_15.csv')"
    ]
   },
   {
@@ -70,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "07c71086",
+   "id": "22374e2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,27 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "60e353c8",
+   "id": "dab84fee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df6], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0f4da1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_extracted_data_bryant_time_15.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58874e2b",
    "metadata": {},
    "outputs": [],
    "source": [
