--- a/master10_csv/merge.ipynb
+++ b/master10_csv/merge.ipynb
@@ -12,24 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "bf8a7af7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = pd.read_csv()\n",
-    "df = pd.read_csv('min_10_start_3700_end_4173_.csv')\n",
-    "df2 = pd.read_csv('pro_players_10min')\n",
+    "final_df = pd.read_csv('final_10.csv')\n",
+    "#df = pd.read_csv('min_10_start_3700_end_4173_.csv')\n",
+    "#df2 = pd.read_csv('pro_players_10min')\n",
     "df3 = pd.read_csv('min_10_start_1500_end_1515_.csv')\n",
     "df4 = pd.read_csv('new_extracted_data_chavez_time_10.csv')\n",
     "df5 = pd.read_csv('new_extracted_data_Jared_time_10.csv')\n",
     "df6 = pd.read_csv('new_extracted_data_smith_time_10.csv')\n",
-    "df7 = pd.read_csv('')"
+    "#df7 = pd.read_csv('')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "f15d291b",
    "metadata": {},
    "outputs": [],
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8a648fae",
+   "execution_count": 8,
+   "id": "d60de1c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "787745c2",
+   "execution_count": 9,
+   "id": "6d036c4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,11 +66,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9828217",
+   "id": "28c1c794",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([df, df7], axis=0, ignore_index=True)"
+    "#df = pd.concat([df, df7], axis=0, ignore_index=True)"
    ]
   },
   {
