--- a/master10_csv/merge.ipynb
+++ b/master10_csv/merge.ipynb
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d60de1c0",
+   "id": "d5e3b57f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6d036c4f",
+   "id": "22293fe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28c1c794",
+   "id": "b03f6843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
+   "id": "a029b889",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=['Unnamed: 0'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "412c7590",
    "metadata": {},
    "outputs": [],
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "1ca6a40c",
    "metadata": {
     "scrolled": true
@@ -112,6 +122,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>airdragon_team100</th>\n",
        "      <th>airdragon_team200</th>\n",
        "      <th>assistsplayer_1</th>\n",
@@ -121,7 +132,6 @@
        "      <th>assistsplayer_4</th>\n",
        "      <th>assistsplayer_5</th>\n",
        "      <th>assistsplayer_6</th>\n",
-       "      <th>assistsplayer_7</th>\n",
        "      <th>...</th>\n",
        "      <th>xp_3</th>\n",
        "      <th>xp_4</th>\n",
@@ -139,6 +149,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
@@ -146,7 +157,6 @@
        "      <td>2.0</td>\n",
        "      <td>7.0</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>...</td>\n",
        "      <td>6278.0</td>\n",
@@ -162,6 +172,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
@@ -171,7 +182,6 @@
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>6996.0</td>\n",
        "      <td>4891.0</td>\n",
@@ -186,6 +196,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
@@ -195,7 +206,6 @@
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>7447.0</td>\n",
        "      <td>5592.0</td>\n",
@@ -210,6 +220,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>4.0</td>\n",
@@ -219,7 +230,6 @@
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>12.0</td>\n",
        "      <td>...</td>\n",
        "      <td>6886.0</td>\n",
        "      <td>4756.0</td>\n",
@@ -234,6 +244,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
@@ -243,7 +254,6 @@
        "      <td>2.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>6126.0</td>\n",
        "      <td>5742.0</td>\n",
@@ -281,169 +291,169 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2434</th>\n",
-       "      <td>1.0</td>\n",
+       "      <th>5108</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>4811.0</td>\n",
-       "      <td>2591.0</td>\n",
-       "      <td>3151.0</td>\n",
-       "      <td>4454.0</td>\n",
-       "      <td>3593.0</td>\n",
-       "      <td>4294.0</td>\n",
-       "      <td>2637.0</td>\n",
+       "      <td>4544.0</td>\n",
+       "      <td>3776.0</td>\n",
+       "      <td>2772.0</td>\n",
+       "      <td>3678.0</td>\n",
+       "      <td>3596.0</td>\n",
+       "      <td>4467.0</td>\n",
+       "      <td>2449.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2435</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3814.0</td>\n",
-       "      <td>3479.0</td>\n",
-       "      <td>2959.0</td>\n",
-       "      <td>4603.0</td>\n",
-       "      <td>3726.0</td>\n",
-       "      <td>4021.0</td>\n",
-       "      <td>1710.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2436</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5451.0</td>\n",
-       "      <td>2665.0</td>\n",
-       "      <td>2313.0</td>\n",
-       "      <td>5600.0</td>\n",
-       "      <td>3283.0</td>\n",
-       "      <td>3614.0</td>\n",
-       "      <td>3301.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2437</th>\n",
+       "      <th>5109</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>3909.0</td>\n",
-       "      <td>2318.0</td>\n",
-       "      <td>2521.0</td>\n",
-       "      <td>5694.0</td>\n",
-       "      <td>3358.0</td>\n",
-       "      <td>4037.0</td>\n",
+       "      <td>2931.0</td>\n",
+       "      <td>5017.0</td>\n",
+       "      <td>2565.0</td>\n",
        "      <td>3065.0</td>\n",
+       "      <td>4661.0</td>\n",
+       "      <td>3426.0</td>\n",
+       "      <td>4070.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2438</th>\n",
-       "      <td>0.0</td>\n",
+       "      <th>5110</th>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5097.0</td>\n",
+       "      <td>2791.0</td>\n",
+       "      <td>2609.0</td>\n",
+       "      <td>5134.0</td>\n",
+       "      <td>3465.0</td>\n",
+       "      <td>4604.0</td>\n",
+       "      <td>3019.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5111</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>4219.0</td>\n",
-       "      <td>3574.0</td>\n",
-       "      <td>2234.0</td>\n",
-       "      <td>3360.0</td>\n",
-       "      <td>2433.0</td>\n",
-       "      <td>4164.0</td>\n",
+       "      <td>3707.0</td>\n",
+       "      <td>3268.0</td>\n",
+       "      <td>2476.0</td>\n",
+       "      <td>4935.0</td>\n",
+       "      <td>3595.0</td>\n",
+       "      <td>5044.0</td>\n",
        "      <td>3175.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5112</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4725.0</td>\n",
+       "      <td>3215.0</td>\n",
+       "      <td>2869.0</td>\n",
+       "      <td>3966.0</td>\n",
+       "      <td>4138.0</td>\n",
+       "      <td>2887.0</td>\n",
+       "      <td>4316.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2439 rows × 197 columns</p>\n",
+       "<p>5113 rows × 198 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      airdragon_team100  airdragon_team200  assistsplayer_1  assistsplayer_10  \\\n",
-       "0                   0.0                1.0              3.0               1.0   \n",
-       "1                   0.0                3.0              2.0               6.0   \n",
-       "2                   0.0                NaN              2.0               2.0   \n",
-       "3                   0.0                NaN              4.0               7.0   \n",
-       "4                   0.0                1.0              3.0               4.0   \n",
-       "...                 ...                ...              ...               ...   \n",
-       "2434                1.0                NaN              0.0               4.0   \n",
-       "2435                0.0                NaN              1.0               0.0   \n",
-       "2436                0.0                1.0              0.0               2.0   \n",
-       "2437                1.0                NaN              2.0               5.0   \n",
-       "2438                0.0                NaN              1.0               1.0   \n",
+       "      Unnamed: 0  airdragon_team100  airdragon_team200  assistsplayer_1  \\\n",
+       "0            0.0                0.0                1.0              3.0   \n",
+       "1            1.0                0.0                3.0              2.0   \n",
+       "2            2.0                0.0                NaN              2.0   \n",
+       "3            3.0                0.0                NaN              4.0   \n",
+       "4            4.0                0.0                1.0              3.0   \n",
+       "...          ...                ...                ...              ...   \n",
+       "5108         NaN                0.0                3.0              0.0   \n",
+       "5109         NaN                1.0                NaN              2.0   \n",
+       "5110         NaN                1.0                NaN              0.0   \n",
+       "5111         NaN                0.0                NaN              0.0   \n",
+       "5112         NaN                0.0                NaN              0.0   \n",
        "\n",
-       "      assistsplayer_2  assistsplayer_3  assistsplayer_4  assistsplayer_5  \\\n",
-       "0                 6.0              2.0              7.0              8.0   \n",
-       "1                 1.0              0.0              2.0              0.0   \n",
-       "2                 2.0              4.0              1.0              3.0   \n",
-       "3                 4.0              8.0              1.0              5.0   \n",
-       "4                 4.0              2.0              2.0              4.0   \n",
-       "...               ...              ...              ...              ...   \n",
-       "2434              2.0              0.0              3.0              6.0   \n",
-       "2435              2.0              3.0              2.0              9.0   \n",
-       "2436              0.0              1.0              1.0              0.0   \n",
-       "2437              4.0              1.0              4.0              5.0   \n",
-       "2438              0.0              3.0              2.0              0.0   \n",
+       "      assistsplayer_10  assistsplayer_2  assistsplayer_3  assistsplayer_4  \\\n",
+       "0                  1.0              6.0              2.0              7.0   \n",
+       "1                  6.0              1.0              0.0              2.0   \n",
+       "2                  2.0              2.0              4.0              1.0   \n",
+       "3                  7.0              4.0              8.0              1.0   \n",
+       "4                  4.0              4.0              2.0              2.0   \n",
+       "...                ...              ...              ...              ...   \n",
+       "5108               0.0              0.0              1.0              0.0   \n",
+       "5109               5.0              1.0              0.0              3.0   \n",
+       "5110               2.0              3.0              1.0              1.0   \n",
+       "5111               1.0              1.0              1.0              3.0   \n",
+       "5112               2.0              3.0              1.0              3.0   \n",
        "\n",
-       "      assistsplayer_6  assistsplayer_7  ...    xp_3    xp_4    xp_5    xp_6  \\\n",
-       "0                 3.0              3.0  ...  6278.0  5651.0  3669.0  5024.0   \n",
-       "1                 4.0              2.0  ...  6996.0  4891.0  6294.0  5946.0   \n",
-       "2                 2.0              1.0  ...  7447.0  5592.0  3879.0  6952.0   \n",
-       "3                 2.0             12.0  ...  6886.0  4756.0  3928.0  6378.0   \n",
-       "4                 0.0              2.0  ...  6126.0  5742.0  4099.0  6884.0   \n",
+       "      assistsplayer_5  assistsplayer_6  ...    xp_3    xp_4    xp_5    xp_6  \\\n",
+       "0                 8.0              3.0  ...  6278.0  5651.0  3669.0  5024.0   \n",
+       "1                 0.0              4.0  ...  6996.0  4891.0  6294.0  5946.0   \n",
+       "2                 3.0              2.0  ...  7447.0  5592.0  3879.0  6952.0   \n",
+       "3                 5.0              2.0  ...  6886.0  4756.0  3928.0  6378.0   \n",
+       "4                 4.0              0.0  ...  6126.0  5742.0  4099.0  6884.0   \n",
        "...               ...              ...  ...     ...     ...     ...     ...   \n",
-       "2434              1.0              1.0  ...  4811.0  2591.0  3151.0  4454.0   \n",
-       "2435              0.0              0.0  ...  3814.0  3479.0  2959.0  4603.0   \n",
-       "2436              1.0              0.0  ...  5451.0  2665.0  2313.0  5600.0   \n",
-       "2437              2.0              4.0  ...  3909.0  2318.0  2521.0  5694.0   \n",
-       "2438              2.0              1.0  ...  4219.0  3574.0  2234.0  3360.0   \n",
+       "5108              4.0              1.0  ...  4544.0  3776.0  2772.0  3678.0   \n",
+       "5109              0.0              5.0  ...  2931.0  5017.0  2565.0  3065.0   \n",
+       "5110              1.0              0.0  ...  5097.0  2791.0  2609.0  5134.0   \n",
+       "5111              1.0              1.0  ...  3707.0  3268.0  2476.0  4935.0   \n",
+       "5112              5.0              1.0  ...  4725.0  3215.0  2869.0  3966.0   \n",
        "\n",
        "        xp_7    xp_8    xp_9  baron_team200  hextechdragon_team100  \\\n",
        "0     8457.0  6991.0  4355.0            NaN                    NaN   \n",
@@ -452,11 +462,11 @@
        "3     7346.0  6593.0  6739.0            1.0                    1.0   \n",
        "4     6053.0  5628.0  5376.0            NaN                    NaN   \n",
        "...      ...     ...     ...            ...                    ...   \n",
-       "2434  3593.0  4294.0  2637.0            1.0                    NaN   \n",
-       "2435  3726.0  4021.0  1710.0            NaN                    NaN   \n",
-       "2436  3283.0  3614.0  3301.0            NaN                    NaN   \n",
-       "2437  3358.0  4037.0  3065.0            NaN                    1.0   \n",
-       "2438  2433.0  4164.0  3175.0            1.0                    NaN   \n",
+       "5108  3596.0  4467.0  2449.0            1.0                    NaN   \n",
+       "5109  4661.0  3426.0  4070.0            NaN                    NaN   \n",
+       "5110  3465.0  4604.0  3019.0            1.0                    NaN   \n",
+       "5111  3595.0  5044.0  3175.0            1.0                    NaN   \n",
+       "5112  4138.0  2887.0  4316.0            NaN                    NaN   \n",
        "\n",
        "      waterdragon_team200  \n",
        "0                     NaN  \n",
@@ -465,16 +475,16 @@
        "3                     NaN  \n",
        "4                     NaN  \n",
        "...                   ...  \n",
-       "2434                  3.0  \n",
-       "2435                  NaN  \n",
-       "2436                  1.0  \n",
-       "2437                  2.0  \n",
-       "2438                  NaN  \n",
+       "5108                  1.0  \n",
+       "5109                  NaN  \n",
+       "5110                  NaN  \n",
+       "5111                  NaN  \n",
+       "5112                  NaN  \n",
        "\n",
-       "[2439 rows x 197 columns]"
+       "[5113 rows x 198 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
