updating final csvs

--- a/master15_csv/merge.ipynb
+++ b/master15_csv/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "7afac051",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "e294e740",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "final_df = pd.read_csv('final_15.csv')\n",
     "df = pd.read_csv('min_15_start_1500_end_1515_.csv')\n",
     "df2 = pd.read_csv('new_extracted_data_chavez_time_15.csv')\n",
+    "df3 = pd.read_csv('min_15_start_3700_end_4173_.csv')\n",
     "df4 = pd.read_csv('pro_players_15min')\n",
     "df5 = pd.read_csv('new_extracted_data_Jared_time_15.csv')\n",
     "df6 = pd.read_csv('new_extracted_data_smith_time_15.csv')\n",
@@ -28,48 +29,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "b6be1148",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.concat([df, df2], axis=0, ignore_index=True)"
+    "df = pd.concat([df, df2], axis=0, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "3d5f613c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.concat([df, df3], axis=0, ignore_index=True)"
+    "df = pd.concat([df, df3], axis=0, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "d175616e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.concat([df, df4], axis=0, ignore_index=True)"
+    "df = pd.concat([df, df4], axis=0, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "af88293f",
+   "execution_count": 6,
+   "id": "057f4be6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([final_df, df5], axis=0, ignore_index=True)"
+    "df = pd.concat([df, df5], axis=0, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "aef322fa",
+   "execution_count": 7,
+   "id": "994a349a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "992be087",
+   "execution_count": 8,
+   "id": "97ad2791",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "ad5293dd",
    "metadata": {},
    "outputs": [],
@@ -98,18 +99,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "c1f30831",
+   "execution_count": 10,
+   "id": "07256fae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('final_15.csv')"
+    "df.drop_duplicates(inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "07256fae",
+   "execution_count": 11,
+   "id": "bf368778",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.reset_index(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2a16368b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns = ['index'],inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2aba86b4",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +323,31 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9250</th>\n",
+       "      <th>4849</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4739.0</td>\n",
+       "      <td>7419.0</td>\n",
+       "      <td>4474.0</td>\n",
+       "      <td>6540.0</td>\n",
+       "      <td>4663.0</td>\n",
+       "      <td>7146.0</td>\n",
+       "      <td>5566.0</td>\n",
+       "      <td>3581.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4850</th>\n",
        "      <td>0.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>2.0</td>\n",
@@ -326,31 +371,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9251</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6115.0</td>\n",
-       "      <td>4569.0</td>\n",
-       "      <td>5345.0</td>\n",
-       "      <td>6675.0</td>\n",
-       "      <td>7759.0</td>\n",
-       "      <td>6123.0</td>\n",
-       "      <td>7026.0</td>\n",
-       "      <td>7360.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9252</th>\n",
+       "      <th>4851</th>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>7.0</td>\n",
@@ -374,7 +395,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9253</th>\n",
+       "      <th>4852</th>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>6.0</td>\n",
@@ -398,7 +419,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9254</th>\n",
+       "      <th>4853</th>\n",
        "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
@@ -423,7 +444,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9255 rows × 197 columns</p>\n",
+       "<p>4854 rows × 197 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -434,11 +455,11 @@
        "3                   0.0              3.0               4.0              6.0   \n",
        "4                   0.0              0.0               5.0              1.0   \n",
        "...                 ...              ...               ...              ...   \n",
-       "9250                0.0              6.0               2.0              5.0   \n",
-       "9251                0.0              3.0               6.0              2.0   \n",
-       "9252                0.0              3.0               7.0              4.0   \n",
-       "9253                0.0              2.0               6.0              3.0   \n",
-       "9254                0.0              4.0               2.0              3.0   \n",
+       "4849                0.0              0.0               3.0              1.0   \n",
+       "4850                0.0              6.0               2.0              5.0   \n",
+       "4851                0.0              3.0               7.0              4.0   \n",
+       "4852                0.0              2.0               6.0              3.0   \n",
+       "4853                0.0              4.0               2.0              3.0   \n",
        "\n",
        "      assistsplayer_3  assistsplayer_4  assistsplayer_5  assistsplayer_6  \\\n",
        "0                 2.0              3.0             10.0              0.0   \n",
@@ -447,11 +468,11 @@
        "3                 5.0              2.0              1.0              5.0   \n",
        "4                 0.0              0.0              5.0              1.0   \n",
        "...               ...              ...              ...              ...   \n",
-       "9250              3.0              7.0              4.0              1.0   \n",
-       "9251              5.0              3.0              3.0              0.0   \n",
-       "9252              1.0              4.0             10.0              0.0   \n",
-       "9253              4.0              3.0              4.0              0.0   \n",
-       "9254              0.0              0.0              4.0              0.0   \n",
+       "4849              2.0              4.0              3.0              1.0   \n",
+       "4850              3.0              7.0              4.0              1.0   \n",
+       "4851              1.0              4.0             10.0              0.0   \n",
+       "4852              4.0              3.0              4.0              0.0   \n",
+       "4853              0.0              0.0              4.0              0.0   \n",
        "\n",
        "      assistsplayer_7  assistsplayer_8  ...    xp_2    xp_3    xp_4    xp_5  \\\n",
        "0                 3.0              2.0  ...  6507.0  6115.0  6528.0  3903.0   \n",
@@ -460,11 +481,11 @@
        "3                 2.0              2.0  ...  4066.0  7244.0  5685.0  7173.0   \n",
        "4                 3.0              1.0  ...  5679.0  6994.0  4862.0  4497.0   \n",
        "...               ...              ...  ...     ...     ...     ...     ...   \n",
-       "9250              1.0              1.0  ...  6654.0  9064.0  6273.0  4420.0   \n",
-       "9251              1.0              1.0  ...  6115.0  4569.0  5345.0  6675.0   \n",
-       "9252              6.0              2.0  ...  6377.0  7360.0  5908.0  5153.0   \n",
-       "9253              3.0              3.0  ...  5019.0  7489.0  4703.0  4548.0   \n",
-       "9254              2.0              0.0  ...  5590.0  5175.0  6942.0  4013.0   \n",
+       "4849              2.0              4.0  ...  4739.0  7419.0  4474.0  6540.0   \n",
+       "4850              1.0              1.0  ...  6654.0  9064.0  6273.0  4420.0   \n",
+       "4851              6.0              2.0  ...  6377.0  7360.0  5908.0  5153.0   \n",
+       "4852              3.0              3.0  ...  5019.0  7489.0  4703.0  4548.0   \n",
+       "4853              2.0              0.0  ...  5590.0  5175.0  6942.0  4013.0   \n",
        "\n",
        "        xp_6    xp_7    xp_8    xp_9  waterdragon_team200  airdragon_team200  \n",
        "0     6288.0  6278.0  8847.0  4759.0                  NaN                NaN  \n",
@@ -473,16 +494,16 @@
        "3     4875.0  4112.0  5390.0  5733.0                  1.0                NaN  \n",
        "4     7593.0  6426.0  7441.0  5094.0                  NaN                NaN  \n",
        "...      ...     ...     ...     ...                  ...                ...  \n",
-       "9250  7347.0  5995.0  5204.0  4561.0                  NaN                1.0  \n",
-       "9251  7759.0  6123.0  7026.0  7360.0                  1.0                1.0  \n",
-       "9252  7334.0  6648.0  7595.0  4694.0                  NaN                1.0  \n",
-       "9253  6047.0  5406.0  6462.0  5080.0                  1.0                NaN  \n",
-       "9254  5762.0  4520.0  4843.0  7064.0                  NaN                NaN  \n",
+       "4849  4663.0  7146.0  5566.0  3581.0                  NaN                1.0  \n",
+       "4850  7347.0  5995.0  5204.0  4561.0                  NaN                1.0  \n",
+       "4851  7334.0  6648.0  7595.0  4694.0                  NaN                1.0  \n",
+       "4852  6047.0  5406.0  6462.0  5080.0                  1.0                NaN  \n",
+       "4853  5762.0  4520.0  4843.0  7064.0                  NaN                NaN  \n",
        "\n",
-       "[9255 rows x 197 columns]"
+       "[4854 rows x 197 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,8 +514,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "b1d84331",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('final_15.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bf368778",
+   "id": "ae50da4a",
    "metadata": {},
    "outputs": [],
    "source": []
